Commit added flex to containers, and links to social

--- a/index.html
+++ b/index.html
@@ -8,6 +8,40 @@
     <title>Benjamin Closson</title>
 </head>
 <body>
-    <h1>My Portfolio Page!</h1>
+    <header class="head">
+        <nav class="nav">
+            <ul class="nav-ul">
+                <a href=""><li class="nav-link">About</li></a>
+                <a href=""><li class="nav-link">Projects</li></a>
+                <a href=""><li class="nav-link">Resume</li></a>
+                <a href=""><li class="nav-link">Contact</li></a>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div>
+            <section class="about">
+                <img id="profile-pic" src="images/head shot professional.jpg" alt="profile photo" width="50"> 
+                <aside<article>This is where my about will go!</article></aside>
+            </section>
+                
+            <section class="projects">
+                <article>This is where my projects will go!</article>
+            </section>
+
+            <section class="experience">
+                <article>This is where my experience will go!</article>
+            </section>
+        </div>
+
+        <footer>
+            <ul class="footer-ul">
+                <a href="https://github.com/bclosson"><li class="github">Github</li></a>
+                <a href="https://www.linkedin.com/in/ben-closson-3102b138/"><li class="linked-in">Linked-In</li></a>
+                <a href="https://codepen.io/bclosson"><li class="codepen">CodePen</li></a>
+            </ul>
+        </footer>
+    </main>
+    
 </body>
 </html>
