Commit added slideshow containers, and placeholder pics

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Benjamin Closson</title>
 </head>
 <body>
+<!---        Header/Nav        -->
     <header class="head">
         <nav class="nav">
             <ul class="nav-ul">
@@ -18,20 +19,51 @@
             </ul>
         </nav>
     </header>
+    <!--        Main Section         -->
     <main>
         <div>
-            <section class="about">
-                <img id="profile-pic" src="images/head shot professional.jpg" alt="profile photo" width="50"> 
-                <aside<article>This is where my about will go!</article></aside>
-            </section>
-                
-            <section class="projects">
-                <article>This is where my projects will go!</article>
-            </section>
+        <!--    About Section        -->
+                <section class="about">
+                    <img id="profile-pic" src="images/head shot professional.jpg" alt="profile photo" width="50"> 
+                    <aside<article>This is where my about will go!</article></aside>
+                </section>
 
-            <section class="experience">
-                <article>This is where my experience will go!</article>
-            </section>
+        <!--    Project Section/Slideshow  Container     -->
+
+            <div class="slideshow-container">
+
+            <!--  Full-Width images with number and caption text -->
+
+                <div class="projects fade">    
+                    <div class="numbertext">1 / 4</div>
+                        <img src="images/pixel grass mountains.jpeg" alt="Tamagotchi Project" style="width:100%">
+                    <div class="text">Caption Text</div>
+                </div> 
+
+                <div class="projects fade">   
+                    <div class="numbertext">2 / 4</div>
+                        <img src="images/workout pic.jpeg" alt="Fitness Tracker Project" style="width:100%">
+                    <div class="text">Caption Two</div>
+                </div> 
+
+                <div class="projects fade">    
+                    <div class="numbertext">3 / 4</div>
+                        <img src="images/sanFran.jpeg" alt="Wayfarer Project" style="width:100%">
+                    <div class="text">Caption Three</div>
+                </div> 
+                
+                <div class="projects fade">   
+                    <div class="numbertext">4 / 4</div> 
+                        <img src="images/rosetta_img.jpeg" alt="Capstone Project" style="width:100%">
+                    <div class="text">Caption Four</div>
+                </div> 
+
+            </div>
+
+        <!--    Experience Section-->
+                <section class="experience">
+                    <article>This is where my experience will go!</article>
+                </section>
         </div>
 
         <footer>
