--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
                     <div class="text">Caption Four</div>
                 </div> 
 
+            <!--  Next and Previous buttons  -->
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+            <br>
+
+            <!--  The dots/circles  -->
+            <div style="text-align:center">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+                <span class="dot" onclick="currentSlide(4)"></span>
             </div>
 
         <!--    Experience Section-->
