Commit aspect ratio's for slideshow images work in progress-not solved

--- a/index.html
+++ b/index.html
@@ -36,25 +36,25 @@
 
                 <div class="projects fade">    
                     <div class="numbertext">1 / 4</div>
-                        <img src="images/pixel grass mountains.jpeg" alt="Tamagotchi Project" style="width:100%">
+                        <img src="images/pixel grass mountains.jpeg" alt="Tamagotchi Project">
                     <div class="text">Caption Text</div>
                 </div> 
 
                 <div class="projects fade">   
                     <div class="numbertext">2 / 4</div>
-                        <img src="images/workout pic.jpeg" alt="Fitness Tracker Project" style="width:100%">
+                        <img src="images/workout pic.jpeg" alt="Fitness Tracker Project">
                     <div class="text">Caption Two</div>
                 </div> 
 
                 <div class="projects fade">    
                     <div class="numbertext">3 / 4</div>
-                        <img src="images/sanFran.jpeg" alt="Wayfarer Project" style="width:100%">
+                        <img src="images/sanFran.jpeg" alt="Wayfarer Project">
                     <div class="text">Caption Three</div>
                 </div> 
                 
                 <div class="projects fade">   
                     <div class="numbertext">4 / 4</div> 
-                        <img src="images/rosetta_img.jpeg" alt="Capstone Project" style="width:100%">
+                        <img src="images/rosetta_img.jpeg" alt="Capstone Project">
                     <div class="text">Caption Four</div>
                 </div> 
 
