gave elements ids

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!--    About Section        -->
                 <section class="about">
                     <img id="profile-pic" src="images/head shot professional.jpg" alt="profile photo" width="50"> 
-                    <aside<article>This is where my about will go!</article></aside>
+                    <aside><article>This is where my about will go!</article></aside>
                 </section>
 
         <!--    Project Section/Slideshow  Container     -->
@@ -36,26 +36,35 @@
 
                 <div class="projects fade">    
                     <div class="numbertext">1 / 4</div>
-                        <img src="images/pixel grass mountains.jpeg" alt="Tamagotchi Project">
-                    <div class="text">Caption Text</div>
+                        <div class="slide-img">
+                            <img src="images/pixel grass mountains.jpeg" alt="Tamagotchi Project">
+                        </div>
+                    <div class="text">Project Tamagotchi</div>
                 </div> 
 
                 <div class="projects fade">   
                     <div class="numbertext">2 / 4</div>
-                        <img src="images/workout pic.jpeg" alt="Fitness Tracker Project">
-                    <div class="text">Caption Two</div>
+                        <div>
+                            <img id="slide-img" src="images/workout pic.jpeg" alt="Fitness Tracker Project">
+                        </div>
+                    <div class="text">Project Fitness Tracker</div>
                 </div> 
 
                 <div class="projects fade">    
                     <div class="numbertext">3 / 4</div>
-                        <img src="images/sanFran.jpeg" alt="Wayfarer Project">
-                    <div class="text">Caption Three</div>
+                        <div width="100%">
+                            <img id="slide-img" src="images/sanFran.jpeg" alt="Wayfarer Project"
+                            max-width="100%" height="auto">
+                        </div>
+                    <div class="text">Project Wayfarer</div>
                 </div> 
                 
                 <div class="projects fade">   
                     <div class="numbertext">4 / 4</div> 
-                        <img src="images/rosetta_img.jpeg" alt="Capstone Project">
-                    <div class="text">Caption Four</div>
+                        <div>
+                            <img id="slide-img" src="images/rosetta_img.jpeg" alt="Capstone Project">
+                        </div>
+                    <div class="text">Project Capstone</div>
                 </div> 
 
             <!--  Next and Previous buttons  -->
@@ -82,7 +91,6 @@
             <ul class="footer-ul">
                 <a href="https://github.com/bclosson"><li class="github">Github</li></a>
                 <a href="https://www.linkedin.com/in/ben-closson-3102b138/"><li class="linked-in">Linked-In</li></a>
-                <a href="https://codepen.io/bclosson"><li class="codepen">CodePen</li></a>
             </ul>
         </footer>
     </main>
