added project screenshots

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="projects fade">    
                     <div class="numbertext">1 / 4</div>
                         <div class="slide-img">
-                            <img src="images/pixel grass mountains.jpeg" alt="Tamagotchi Project">
+                            <img src="" alt="Tamagotchi Project">
                         </div>
                     <div class="text">Project Tamagotchi</div>
                 </div> 
