replaced placeholder photos with project screenshots

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="projects fade">    
                     <div class="numbertext">1 / 4</div>
                         <div class="slide-img">
-                            <img src="" alt="Tamagotchi Project">
+                            <img src="images/Tamagotchi.jpg" alt="Tamagotchi Project">
                         </div>
                     <div class="text">Project Tamagotchi</div>
                 </div> 
@@ -45,7 +45,7 @@
                 <div class="projects fade">   
                     <div class="numbertext">2 / 4</div>
                         <div>
-                            <img id="slide-img" src="images/workout pic.jpeg" alt="Fitness Tracker Project">
+                            <img id="slide-img" src="images/Fitness-Tracker.jpg" alt="Fitness Tracker Project">
                         </div>
                     <div class="text">Project Fitness Tracker</div>
                 </div> 
@@ -53,7 +53,7 @@
                 <div class="projects fade">    
                     <div class="numbertext">3 / 4</div>
                         <div width="100%">
-                            <img id="slide-img" src="images/sanFran.jpeg" alt="Wayfarer Project"
+                            <img id="slide-img" src="images/Wayfarer.jpg" alt="Wayfarer Project"
                             max-width="100%" height="auto">
                         </div>
                     <div class="text">Project Wayfarer</div>
@@ -62,9 +62,9 @@
                 <div class="projects fade">   
                     <div class="numbertext">4 / 4</div> 
                         <div>
-                            <img id="slide-img" src="images/rosetta_img.jpeg" alt="Capstone Project">
+                            <img id="slide-img" src="images/Utilize!.jpg" alt="Utilize!">
                         </div>
-                    <div class="text">Project Capstone</div>
+                    <div class="text">Utilize!</div>
                 </div> 
 
             <!--  Next and Previous buttons  -->
