--- a/index.html
+++ b/index.html
@@ -34,38 +34,41 @@
 
             <!--  Full-Width images with number and caption text -->
 
-                <div class="projects fade">    
-                    <div class="numbertext">1 / 4</div>
-                        <div class="slide-img">
-                            <img src="images/Tamagotchi.jpg" alt="Tamagotchi Project">
+                <div class="projects fade" id="projects">   
+                    <div class="numbertext">1 / 4</div> 
+                        <div id="img-div">
+                            <img id="slide-img" src="images/Utilize!.jpg" alt="Utilize!">
                         </div>
-                    <div class="text">Project Tamagotchi</div>
+                        <div class="text">Utilize!</div>
                 </div> 
 
-                <div class="projects fade">   
+                <div class="projects fade" id="projects">    
                     <div class="numbertext">2 / 4</div>
-                        <div>
-                            <img id="slide-img" src="images/Fitness-Tracker.jpg" alt="Fitness Tracker Project">
-                        </div>
-                    <div class="text">Project Fitness Tracker</div>
-                </div> 
-
-                <div class="projects fade">    
-                    <div class="numbertext">3 / 4</div>
-                        <div width="100%">
+                        <div id="img-div"> 
                             <img id="slide-img" src="images/Wayfarer.jpg" alt="Wayfarer Project"
                             max-width="100%" height="auto">
                         </div>
-                    <div class="text">Project Wayfarer</div>
+                    <div class="text">Wayfarer</div>
                 </div> 
-                
-                <div class="projects fade">   
-                    <div class="numbertext">4 / 4</div> 
-                        <div>
-                            <img id="slide-img" src="images/Utilize!.jpg" alt="Utilize!">
+
+                <div class="projects fade" id="projects">   
+                    <div class="numbertext">3 / 4</div>
+                        <div id="img-div">
+                            <img id="slide-img" src="images/Fitness-Tracker.jpg" alt="Fitness Tracker Project">
                         </div>
-                    <div class="text">Utilize!</div>
+                    <div class="text">Fitness Tracker</div>
                 </div> 
+
+                <div class="projects fade" id="projects">    
+                    <div class="numbertext">4 / 4</div>
+                        <div id="img-div">
+                            <img id="slide-img" src="images/Tamagotchi.jpg" alt="Tamagotchi Project">
+                        </div>
+                    <div class="text">Tamagotchi</div>
+                </div> 
+
+
+                
 
             <!--  Next and Previous buttons  -->
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -90,7 +93,7 @@
         <footer>
             <ul class="footer-ul">
                 <a href="https://github.com/bclosson"><li class="github">Github</li></a>
-                <a href="https://www.linkedin.com/in/ben-closson-3102b138/"><li class="linked-in">Linked-In</li></a>
+                <a href="https://www.linkedin.com/in/ben-closson-3102b138/"><li class="linked-in">LinkedIn</li></a>
             </ul>
         </footer>
     </main>
