commit adjusted profile pic, links, and project image height

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <header class="head">
         <nav class="nav">
             <ul class="nav-ul">
-                <a href=""><li class="nav-link">About</li></a>
-                <a href=""><li class="nav-link">Projects</li></a>
-                <a href=""><li class="nav-link">Resume</li></a>
-                <a href=""><li class="nav-link">Contact</li></a>
+                <a id="link" href=""><li class="nav-link">About</li></a>
+                <a id="link" href=""><li class="nav-link">Projects</li></a>
+                <a id="link" href=""><li class="nav-link">Resume</li></a>
+                <a id="link" href=""><li class="nav-link">Contact</li></a>
             </ul>
         </nav>
     </header>
@@ -35,7 +35,6 @@
             <!--  Full-Width images with number and caption text -->
 
                 <div class="projects fade" id="projects">   
-                    <div class="numbertext">1 / 4</div> 
                         <div id="img-div">
                             <img id="slide-img" src="images/Utilize!.jpg" alt="Utilize!">
                         </div>
@@ -43,7 +42,6 @@
                 </div> 
 
                 <div class="projects fade" id="projects">    
-                    <div class="numbertext">2 / 4</div>
                         <div id="img-div"> 
                             <img id="slide-img" src="images/Wayfarer.jpg" alt="Wayfarer Project"
                             max-width="100%" height="auto">
@@ -52,7 +50,6 @@
                 </div> 
 
                 <div class="projects fade" id="projects">   
-                    <div class="numbertext">3 / 4</div>
                         <div id="img-div">
                             <img id="slide-img" src="images/Fitness-Tracker.jpg" alt="Fitness Tracker Project">
                         </div>
@@ -60,7 +57,6 @@
                 </div> 
 
                 <div class="projects fade" id="projects">    
-                    <div class="numbertext">4 / 4</div>
                         <div id="img-div">
                             <img id="slide-img" src="images/Tamagotchi.jpg" alt="Tamagotchi Project">
                         </div>
@@ -92,8 +88,8 @@
 
         <footer>
             <ul class="footer-ul">
-                <a href="https://github.com/bclosson"><li class="github">Github</li></a>
-                <a href="https://www.linkedin.com/in/benjamin-closson/"><li class="linked-in">LinkedIn</li></a>
+                <a id="link" href="https://github.com/bclosson"><li class="github">Github</li></a>
+                <a id="link" href="https://www.linkedin.com/in/benjamin-closson/"><li class="linked-in">LinkedIn</li></a>
             </ul>
         </footer>
     </main>
