commit began styling about section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
         <!--    About Section        -->
                 <section class="about">
                     <img id="profile-pic" src="images/head shot professional.jpg" alt="profile photo" width="50"> 
-                    <aside><article>This is where my about will go!</article></aside>
+                    <aside><article>I am a Full Stack Developer with a background in the hospitality industry. I am passionate about creating exceptional experiences and developing programs to enrich the lives of clients and users. I have the desire to join an organization as a developer that is people focused, and strives to make user experiences approachable and easy to navigate.
+                    <br>
+                    <br>
+                    I offer a unique perspective coming from a customer focused industry in Hospitality, where being able to anticipate the needs of clients is imperative to delivering the best experiences, as well as being able to adjust to changing environments rapidly given the needs of the moment.
+                    I love helping people realize their value, creating great experiences for clients, and working creatively to solve problems that may not have obvious solutions. I believe in hard work, focus, respectful communication, teamwork and striving to keep building on knowledge and skills.</article></aside>
                 </section>
 
         <!--    Project Section/Slideshow  Container     -->
