commit added anchor tag to projects to link to deployed site, added section for contact

--- a/index.html
+++ b/index.html
@@ -25,46 +25,47 @@
         <!--    About Section        -->
                 <section class="about">
                     <img id="profile-pic" src="images/head shot professional.jpg" alt="profile photo" width="50"> 
-                    <aside><article>I am a Full Stack Developer with a background in the hospitality industry. I am passionate about creating exceptional experiences and developing programs to enrich the lives of clients and users. I have the desire to join an organization as a developer that is people focused, and strives to make user experiences approachable and easy to navigate.
+                    <article>
+                        <h3>About Me</h3>
+                        <p>I am a full stack develper with a background in the hospitality industry.  I am passionate about createin exeptional experiences and developing programs to enrich the lives of clients and users.  I have the desire to join a people focused organization as a developer that strives to make user experiences approachable and easy to navigate.</p>
                     <br>
                     <br>
-                    I offer a unique perspective coming from a customer focused industry in Hospitality, where being able to anticipate the needs of clients is imperative to delivering the best experiences, as well as being able to adjust to changing environments rapidly given the needs of the moment.
-                    I love helping people realize their value, creating great experiences for clients, and working creatively to solve problems that may not have obvious solutions. I believe in hard work, focus, respectful communication, teamwork and striving to keep building on knowledge and skills.</article></aside>
+                        <p>I offer a unique perspective coming from a customer focused industry in Hospitality, where being able to anticipate the needs of clients and colleagues is imperative to delivering hte best experiences, as well as being able to adjust to changing environmets rapidly given the needs of the moment.  I love helpig people relize their value, creating great experiences for clients, and working creaatively to solve problems that may not have obvious solutions.  I believe in hard work, focus, respectful communication, teamwork, and striving to keep buiding on knowledge and skills.</p>
+                    </article>
                 </section>
 
         <!--    Project Section/Slideshow  Container     -->
-
+            <label for="projects-section" id="projects-label">Projects</label>
             <div class="slideshow-container">
 
             <!--  Full-Width images with number and caption text -->
 
                 <div class="projects fade" id="projects">   
                         <div id="img-div">
-                            <img id="slide-img" src="images/Utilize!.jpg" alt="Utilize!">
+                            <a href="https://serene-shore-87850.herokuapp.com" target="_blank"><img id="slide-img" src="images/Utilize!.jpg" alt="Utilize!"></a>
                         </div>
-                        <div class="text">Utilize!</div>
+                        <div class="text"></div>
                 </div> 
 
                 <div class="projects fade" id="projects">    
                         <div id="img-div"> 
-                            <img id="slide-img" src="images/Wayfarer.jpg" alt="Wayfarer Project"
-                            max-width="100%" height="auto">
+                            <a href="https://project2-wayfair.herokuapp.com/" target="_blank"><img id="slide-img" src="images/Wayfarer.jpg" alt="Wayfarer Project"></a>
                         </div>
-                    <div class="text">Wayfarer</div>
+                    <div class="text"></div>
                 </div> 
 
                 <div class="projects fade" id="projects">   
                         <div id="img-div">
-                            <img id="slide-img" src="images/Fitness-Tracker.jpg" alt="Fitness Tracker Project">
+                            <a href="https://peaceful-springs-79098.herokuapp.com/" target="_blank"><img id="slide-img" src="images/Fitness-Tracker.jpg" alt="Fitness Tracker Project"></a>
                         </div>
-                    <div class="text">Fitness Tracker</div>
+                    <div class="text"></div>
                 </div> 
 
                 <div class="projects fade" id="projects">    
                         <div id="img-div">
-                            <img id="slide-img" src="images/Tamagotchi.jpg" alt="Tamagotchi Project">
+                            <a href="https://bclosson.github.io/Tamagotchi-Project/" target="_blank"><img id="slide-img" src="images/Tamagotchi.jpg" alt="Tamagotchi Project"></a>
                         </div>
-                    <div class="text">Tamagotchi</div>
+                    <div class="text"></div>
                 </div> 
 
 
@@ -87,6 +88,10 @@
         <!--    Experience Section-->
                 <section class="experience">
                     <article>This is where my experience will go!</article>
+                </section>
+
+                <section class="contact">
+                    <article>This is where my contact form will go!</article>
                 </section>
         </div>
 
