commit added to experience section, some color styling

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 <body>
 <!---        Header/Nav        -->
     <header class="head">
+        <h1 id="header-h1">Benjamin Closson</h1>
+        <h4 id="header-h4">Full Stack Sofware Developer</h4>
         <nav class="nav">
             <ul class="nav-ul">
-                <a id="link" href="#about-section"><li class="nav-link">About</li></a>
-                <a id="link" href="#projects-container"><li class="nav-link">Projects</li></a>
-                <a id="link" href="#resume"><li class="nav-link">Resume</li></a>
+                <a id="link" href="#about-section"><li class="nav-link">About</li></a><br>
+                <a id="link" href="#projects-container"><li class="nav-link">Projects</li></a><br>
+                <a id="link" href="#resume"><li class="nav-link">Experience</li></a><br>
                 <a id="link" href="#contact"><li class="nav-link">Contact</li></a>
             </ul>
         </nav>
@@ -26,13 +28,13 @@
                 <section class="about" id="about-section">
                     <img id="profile-pic" src="images/head shot professional.jpg" alt="profile photo"> 
                     <article>
-                        <h3>About Me</h3>
+                        <h3 id="about-h3">About Me</h3>
                         <p id="about-p">I am a full stack developer with a background in the hospitality industry.  I am passionate about creating exceptional experiences and developing programs to enrich the lives of clients and users.  I have the desire to join a people focused organization as a developer that strives to make user experiences approachable and easy to navigate.</p>
                     <br>
                     <br>
                         <p id="about-p">I offer a unique perspective coming from a customer focused industry in Hospitality, where being able to anticipate the needs of clients and colleagues is imperative to delivering hte best experiences, as well as being able to adjust to changing environmets rapidly given the needs of the moment.  I love helpig people relize their value, creating great experiences for clients, and working creaatively to solve problems that may not have obvious solutions.  I believe in hard work, focus, respectful communication, teamwork, and striving to keep buiding on knowledge and skills.</p>
                         <br>
-                        <p id="about-p"></p>
+                        <p id="about-p">My interests outside of programming I enjoy spending my time cooking, dining, going to the theatre and sporting events, hiking, biking, running with my dogs, climbing, and pretty much everything that has to do with being active in the outdoors.</p>
                     </article>
                 </section>
 
@@ -90,7 +92,14 @@
         <!--    Experience Section-->
                 <h3>Experience</h3>
                 <section class="experience" id="resume">
-                    <article>This is where my experience will go!</article>
+                    <p>A seasoned professional with 17 years in people management, relationship building, P&L management/cost controls, procurement, team building, hiring, training, operational systems management, customer experience customization in small private to large corporate environments. </p>
+                    <article><strong>Hotel 1000, All Water Seafood and Oyster Bar| 1000 1st Ave. Seattle, WA 98104</strong><br>
+                    Executive Chef March 2018 – March 2020<br>
+                    <strong>Heathman Hotel, Trellis Restaurant | 220 Kirkland Ave. Kirkland, WA 98033</strong><br>
+                    Executive Chef 2017 – 2018<br>
+                    <strong>Nordstrom | 500 Pine Street Seattle, WA 98101</strong><br>
+                    Executive Chef 2012 – 2017
+                    </article>
                 </section>
 
                 <h3>Contact</h3>
