--- a/index.html
+++ b/index.html
@@ -93,11 +93,12 @@
                 <h3>Experience</h3>
                 <section class="experience" id="resume">
                     <p>A seasoned professional with 17 years in product development, people management, relationship building, P&L management/cost controls, procurement, team building, hiring, training, operational systems management, and customer experience customization in small private to large corporate environments.</p><br>
-                    <article><strong>Hotel 1000, All Water Seafood and Oyster Bar| 1000 1st Ave. Seattle, WA 98104</strong><br>
+                    <article><strong>Hotel 1000, All Water Seafood and Oyster Bar 
+                    Seattle, WA</strong><br>
                     Executive Chef March 2018 – March 2020<br>
-                    <strong>Heathman Hotel, Trellis Restaurant | 220 Kirkland Ave. Kirkland, WA 98033</strong><br>
+                    <strong>Heathman Hotel/Trellis Kirkland, WA</strong><br>
                     Executive Chef 2017 – 2018<br>
-                    <strong>Nordstrom | 500 Pine Street Seattle, WA 98101</strong><br>
+                    <strong>Nordstrom Seattle, WA</strong><br>
                     Executive Chef 2012 – 2017
                     </article>
                 </section>
